--- a/src/components/sections/FinalCtaSection/FinalCtaSection.module.scss
+++ b/src/components/sections/FinalCtaSection/FinalCtaSection.module.scss
@@ -192,7 +192,7 @@
     width: 100%;
   }
 
-  .panel,
+  .content,
   .form {
     padding: 1.2rem;
   }
