--- a/src/components/ui/TestimonialsShowcase/TestimonialsShowcase.module.scss
+++ b/src/components/ui/TestimonialsShowcase/TestimonialsShowcase.module.scss
@@ -169,6 +169,21 @@
   color: #fff1e3;
 }
 
+@media (max-width: 1100px) {
+  .stage {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .cardWide {
+    grid-column: 1 / -1;
+    margin-top: 0;
+  }
+
+  .cardOffset {
+    margin-top: 2rem;
+  }
+}
+
 @media (max-width: 960px) {
   .stage {
     grid-template-columns: 1fr;
